tests/semantic/statement_building/snapshots/r#mod__semantic__statement_building__block_building__block_with_access_to_child_scope_var.snap
---
source: tests/semantic/statement_building/block_building.rs
expression: error
---
- key:
    kind: VarNotFound
    payload:
      Str: local
  earliest_phase: ExprEngine
  ranges:
    - start: 0
      end: 0
  severity: Error
- key:
    kind: MissingArg
    payload: None
  earliest_phase: ExprEngine
  ranges:
    - start: 0
      end: 0
  severity: Error
