tests/semantic/statement_building/snapshots/r#mod__semantic__statement_building__block_building__empty_block_building.snap
---
source: tests/semantic/statement_building/block_building.rs
expression: test_ctx.namespace.func_ctx
---
funcs:
  0:
    name: main
    is_member: false
    is_static: false
    params: []
    return_type:
      Primitive: Void
    block:
      body:
        - Block:
            block:
              body: []
              scope_id: 2
      scope_id: 1
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  main: 0
next_function_id: 1
